<?xml version="1.0"?>
<package format="3">
  <name>robile_navigation</name>
  <version>0.0.0</version>
  <description>The robile_navigation package</description>

  <maintainer email="deebuls@gmail.com">Deebul Nair</maintainer>
  <license>Apache License 2.0</license>
  <author email="deebuls@gmail.com">Deebul Nair</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <exec_depend>nav2_bringup</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>
  </export>

</package>
